forgot to make a public folder

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta type="description" description="Frontend Mentor project that displays IP locations, uses JavaScript, Express, and the IPify, Leaflet, and Mapbox APIs.">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
 
   <!-- leaflet stuff -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
@@ -38,7 +38,7 @@
             placeholder="Search for any IP address or domain"
           >
           <button class="search-btn flex" aria-label="Search for the IP">
-            <img class="arrow-icon" src="images/icon-arrow.svg" alt="arrow icon" aria-hidden="true">
+            <img class="arrow-icon" src="./images/icon-arrow.svg" alt="arrow icon" aria-hidden="true">
           </button>
         </form>
       </header>
@@ -71,6 +71,6 @@
   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
