--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <meta type="description" description="Frontend Mentor project that displays IP locations, uses JavaScript, Express, and the IPify, Leaflet, and Mapbox APIs.">
 
+  <!-- og tags -->
+  <meta property="og:url"
+    content="https://fementor-ip-tracker.herokuapp.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Frontend Mentor IP Adress Tracker" />
+  <meta property="og:description" content="Frontend Mentor project that displays IP locations, uses JavaScript, Express, and the IPify, Leaflet, and Mapbox APIs." />
+  <meta property="og:image"
+    content="./screenshots/desktop-preview.png" />
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
 
