--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-  <meta type="description"
-    description="Frontend Mentor project that displays IP locations, uses JavaScript, Express, and the IPify, Leaflet, and Mapbox APIs.">
+  <meta name="description"
+    content="Frontend Mentor project that displays IP locations, uses JavaScript, Express, and the IPify, Leaflet, and Mapbox APIs.">
 
   <!-- og tags -->
   <meta property="og:url" content="https://fementor-ip-tracker.herokuapp.com/" />
